# nrf-hal

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.ci.toml  Cargo.example.toml  Cargo.toml  LICENSE-MIT  README.md  build.rs  memory.x
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  hil.yml
boards/actinius-icarus/: Cargo.toml  README.md
boards/actinius-icarus/examples/: blinky.rs
boards/actinius-icarus/src/: lib.rs
boards/adafruit-nrf52-bluefruit-le/: Cargo.toml  README.md  memory.x
boards/adafruit-nrf52-bluefruit-le/examples/: blinky.rs
boards/adafruit-nrf52-bluefruit-le/src/: lib.rs
boards/adafruit_nrf52pro/: Cargo.toml
boards/adafruit_nrf52pro/examples/: blinky.rs
boards/adafruit_nrf52pro/src/: lib.rs
boards/ebyte-e73-tbx/: Cargo.toml  README.md
boards/ebyte-e73-tbx/examples/: blinky.rs
boards/ebyte-e73-tbx/src/: lib.rs
boards/nRF52-DK/: Cargo.toml  README.md
boards/nRF52-DK/examples/: blinky.rs
boards/nRF52-DK/src/: lib.rs
boards/nRF52840-DK/: Cargo.toml
boards/nRF52840-DK/examples/: blinky.rs
boards/nRF52840-DK/src/: lib.rs
boards/nRF9160-DK/: Cargo.toml  README.md
boards/nRF9160-DK/examples/: blinky.rs
boards/nRF9160-DK/src/: lib.rs
boards/nrf52840-mdk/: Cargo.toml
boards/nrf52840-mdk/examples/: blinky.rs  serial.rs
boards/nrf52840-mdk/src/: lib.rs
boards/thingy91/: Cargo.toml  README.md
examples/: README.md
examples/.cargo/: config.toml
examples/bbq-uarte-demo/: Cargo.toml  Embed.toml  debug.gdb
examples/bbq-uarte-demo/src/: main.rs
examples/blinky-button-demo/: Cargo.toml  Embed.toml  README.md
examples/blinky-button-demo/src/: main.rs
examples/ccm-demo/: Cargo.toml  Embed.toml  README.md
examples/ccm-demo/src/: main.rs  stopwatch.rs
examples/comp-demo/: Cargo.toml  README.md
examples/comp-demo/src/: main.rs
examples/ecb-demo/: Cargo.toml  Embed.toml  README.md
examples/gpiote-demo/: Cargo.toml  Embed.toml  README.md
examples/gpiote-demo-mono-timer/: Cargo.toml
examples/hello-world/: Cargo.toml  Embed.toml
examples/i2s-controller-demo/: Cargo.toml  Embed.toml  README.md
examples/i2s-peripheral-demo/: Cargo.toml  README.md
examples/lpcomp-demo/: Cargo.toml  README.md
examples/monotonic-blinky/: Cargo.toml  Embed.toml  README.md
examples/nrf5340-demo/: Cargo.toml  README.md
examples/nvmc-demo/: Cargo.toml  memory.x
examples/pdm-demo/: README.md
examples/ppi-demo/: Cargo.toml  Embed.toml  README.md
examples/pwm-blinky-demo/: Cargo.toml  Embed.toml  build.rs  memory.x
examples/pwm-demo/: Cargo.toml  README.md
examples/qdec-demo/: Cargo.toml  Embed.toml  README.md
examples/rtc-demo/: Cargo.toml  Embed.toml  README.md
examples/rtfm-demo/: Cargo.toml
examples/rtfm-uarte-interrupts/: Cargo.toml
examples/rtic-demo/: Cargo.toml  README.md
examples/rtic-serial-interrupt/: Cargo.toml  README.md
examples/spi-demo/: Cargo.toml  README.md
examples/spis-demo/: Cargo.toml  README.md
examples/twi-ssd1306/: .gdbinit  Cargo.toml  README.md
examples/twim-demo/: Cargo.toml  README.md
examples/twis-demo/: Cargo.toml  README.md
examples/twis-dma-demo/: Cargo.toml
examples/uarte/: Cargo.toml
examples/uarte-demo/: Cargo.toml  Embed.toml  README.md
examples/usb/: .gdbinit  Cargo.toml  Embed.toml  README.md
examples/usb-test/: Cargo.toml
examples/wdt-demo/: Cargo.toml  Embed.toml  README.md
nrf-hal-common/: Cargo.toml  build.rs
nrf-hal-common/src/: adc.rs  ccm.rs  clocks.rs  comp.rs  delay.rs  delay_timer.rs  ecb.rs  gpio.rs  gpiote.rs  i2s.rs  ieee802154.rs  lib.rs  lpcomp.rs  monotonic.rs  mutex.rs  nvmc.rs  pdm.rs  ppi.rs  pwm.rs  qdec.rs  rng.rs  rtc.rs  saadc.rs  spi.rs  spim.rs  spis.rs  spu.rs  temp.rs  time.rs  timer.rs  twi.rs  twim.rs  twis.rs  uart.rs  uarte.rs  uicr.rs  usbd.rs  wdt.rs
nrf-hal-common/src/bbq_uarte/: app.rs  buffer.rs  irq.rs  mod.rs
nrf-hal-common/src/ppi/: event_nrf51.rs  event_nrf52805.rs  event_nrf52810.rs  event_nrf52811.rs  event_nrf52832.rs  event_nrf52833.rs  event_nrf52840.rs  mod.rs  task_nrf51.rs  task_nrf52805.rs  task_nrf52810.rs  task_nrf52811.rs  task_nrf52832.rs  task_nrf52833.rs  task_nrf52840.rs
nrf-hal-common/src/usbd/: errata.rs  mod.rs
nrf51-hal/: Cargo.toml  build.rs
nrf51-hal/src/: lib.rs
nrf52-hal/: Cargo.toml
nrf52-hal-common/: Cargo.toml
nrf52-hal-common/src/: clocks.rs  constants.rs  delay.rs  gpio.rs  lib.rs  reset.rs  rng.rs  rtc.rs  saadc.rs  spim.rs  temp.rs  timer.rs  twim.rs  uarte.rs  uarte_async.rs  uicr.rs  usb.rs
nrf52-hal-common/src/uarte/: blocking.rs  mod.rs  nonblocking.rs
nrf52-hal-common/src/usbd/: errata.rs  mod.rs
nrf52-hal-managed/: Cargo.toml
nrf52-hal-managed/src/: lib.rs  wall_clock.rs
nrf52-hal/src/: clocks.rs  spim.rs  timer.rs
nrf52805-hal/: Cargo.toml  build.rs
nrf52805-hal/src/: lib.rs
nrf52810-hal/: Cargo.toml  build.rs
nrf52810-hal/src/: lib.rs
nrf52811-hal/: Cargo.toml  build.rs  memory.x
nrf52811-hal/src/: lib.rs
nrf52832-hal/: Cargo.toml  build.rs  memory.x  memory_xxAA.x  memory_xxAB.x
nrf52832-hal/src/: lib.rs
nrf52833-hal/: Cargo.toml  memory.x
nrf52833-hal/src/: lib.rs
nrf52840-hal/: Cargo.toml  memory.x
nrf52840-hal-tests/: Cargo.toml  README.md
nrf52840-hal-tests/.cargo/: config.toml
nrf52840-hal-tests/tests/: gpio-input-floating.rs  gpio-input-pull.rs  gpio-input-pulled.rs  gpio-output-open-drain-io.rs  gpio-output-open-drain.rs  gpio-output-push-pull.rs  nvmc.rs  serial.rs
nrf52840-hal/src/: clocks.rs  delay.rs  gpio.rs  ieee802154.rs  lib.rs  timer.rs
nrf5340-app-hal/: Cargo.toml  memory.x
nrf5340-app-hal/src/: lib.rs
nrf5340-net-hal/: Cargo.toml  README.md  memory.x
nrf5340-net-hal/src/: lib.rs
nrf9120-hal/: Cargo.toml
nrf9120-hal/src/: lib.rs
nrf9160-hal/: Cargo.toml  README.md  memory.x
nrf9160-hal/src/: lib.rs
rtfm-demo/: Cargo.toml
rtfm-demo/src/: main.rs
scripts/: build.sh
src/: clocks.rs  delay.rs  gpio.rs  lib.rs  spi.rs  spim.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: ci.rs
(+45 files in other folders)
