[workspace]
members = [
  "nrf52810-hal",
  "nrf52832-hal",
  "nrf52833-hal",
  "nrf52840-hal",
  "nrf9160-hal",
  "examples/rtic-demo",
  "examples/spi-demo",
  "examples/twi-ssd1306",
  "examples/ecb-demo",
  "examples/ccm-demo",
  "examples/ppi-demo",
  "examples/gpiote-demo",
  "examples/wdt-demo",
  "examples/comp-demo",
  "examples/usb",
  "examples/usb-test",
]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[patch.crates-io.usb-device]
git = "https://github.com/jonas-schievink/usb-device.git"
branch = "inhibit-setaddr-resp"
