[workspace]
members = [
  "xtask",
  "nrf52810-hal",
  "nrf52832-hal",
  "nrf52833-hal",
  "nrf52840-hal",
  "nrf9160-hal",
  "examples/*",
]
exclude = ["examples/.DS_Store"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
