[workspace]
members = [
  "xtask",
  "nrf52805-hal",
  "nrf52810-hal",
  "nrf52811-hal",
  "nrf52832-hal",
  "nrf52833-hal",
  "nrf52840-hal",
  "nrf52840-hal-tests",
  "nrf9160-hal",
  "examples/*",
]
exclude = ["examples/.cargo"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
