[package]
name = "nrf-hal-common"
version = "0.15.0"
description = "Implementation details of the nRF HAL crates. Don't use this directly, use one of the specific HAL crates instead (`nrfXYZ-hal`)."
readme = "../README.md"

repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
    "Daniel Egger <daniel@eggers-club.de>",
    "Ferdia McKeogh <ferdia@mckeogh.tech>",
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "nrf", "hal"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
nb = "1.0.0"
fixed = "1.0.0"
rand_core = "0.6.3"
cfg-if = "1.0.0"
embedded-dma = "0.2.0"
embedded-storage = "0.3.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.nrf51-pac]
optional = true
version = "0.11.0"

[dependencies.nrf52810-pac]
optional = true
version = "0.11.0"

[dependencies.nrf52811-pac]
optional = true
version = "0.11.0"

[dependencies.nrf52832-pac]
optional = true
version = "0.11.0"

[dependencies.nrf52833-pac]
optional = true
version = "0.11.0"

[dependencies.nrf52840-pac]
optional = true
version = "0.11.0"

[dependencies.nrf5340-app-pac]
optional = true
version = "0.11.0"

[dependencies.nrf5340-net-pac]
optional = true
version = "0.11.0"

[dependencies.nrf9160-pac]
optional = true
version = "0.11.0"

[dependencies.nrf-usbd]
version = "0.1.0"
optional = true

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[features]
doc = []
51 = ["nrf51-pac"]
52810 = ["nrf52810-pac"]
52811 = ["nrf52811-pac"]
52832 = ["nrf52832-pac"]
52833 = ["nrf52833-pac", "nrf-usbd"]
52840 = ["nrf52840-pac", "nrf-usbd"]
5340-app = ["nrf5340-app-pac"]
5340-net = ["nrf5340-net-pac"]
9160 = ["nrf9160-pac"]
