[package]
name = "nrf51-hal"
version = "0.11.1"
edition = "2018"
description = "HAL for nRF51 microcontrollers"
repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
    "Ferdia McKeogh <ferdia@mckeogh.tech>",
    "Daniel Egger <daniel@eggers-club.de>"
]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf51"]
license = "MIT OR Apache-2.0"

[dependencies]
nrf51 = "0.9.0"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["51"]
version = "=0.11.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[features]
doc = []
rt = ["nrf51/rt"]
# Note: We use the xxAB package by default because it has the least amount of available resources.
default = ["rt", "xxAB-package"]
xxAA-package = []
xxAB-package = []
xxAC-package = []
