[package]
authors = [
    "James Munns <james.munns@gmail.com>",
    "Hanno Braun <hanno@braun-robotics.com",
    "Wez Furlong <wez@wezfurlong.org",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Common HAL for the nRF52 family of microcontrollers.  More specific HAL crates also exist."
keywords = ["arm", "cortex-m", "nrf52", "hal"]
license = "MIT OR Apache-2.0"
name = "nrf52-hal-common"
repository = "https://github.com/nrf-rs/nrf52"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.4"
nb = "0.1.1"
void = { version = "1", default-features = false }

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.nrf52]
optional = true
version = "~0.4"

[dependencies.nrf52840]
optional = true
version = "~0.2"

[features]
doc = []
default = []
52832 = ["nrf52"]
52840 = ["nrf52840"]

