[package]
name = "nrf52-hal-common"
version = "0.8.0"
description = "Common HAL for the nRF52 family of microcontrollers.  More specific HAL crates also exist."

repository = "https://github.com/nrf-rs/nrf52-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.1"
fpa = "0.1.0"
rand_core = "0.4.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nrf52810-pac]
optional = true
version = "0.6.0"

[dependencies.nrf52832-pac]
optional = true
version = "0.6.0"

[dependencies.nrf52840-pac]
optional = true
version = "0.6.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[features]
doc = []
default = ["52832"]
52810 = ["nrf52810-pac"]
52832 = ["nrf52832-pac"]
52840 = ["nrf52840-pac"]
