[package]
authors = [
    "James Munns <james.munns@gmail.com>",
    "Hanno Braun <hanno@braun-robotics.com"
]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the nRF52 family of microcontrollers"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
license = "MIT OR Apache-2.0"
name = "nrf52-hal"
repository = "https://github.com/jamesmunns/nrf52-hal"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.4"
nb = "0.1.1"
void = { version = "1", default-features = false }

[dependencies.nrf52]
version = "0.4.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[features]
doc = []
rt = ["nrf52/rt"]
default = ["rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
debug = true
lto = true
