[package]
name = "nrf52811-hal"
version = "0.16.0"
edition = "2018"
description = "HAL for nRF52811 microcontrollers"
readme = "../README.md"

repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
    "Ferdia McKeogh <ferdia@mckeogh.tech>",
]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52811"]
license = "MIT OR Apache-2.0"

[dependencies]
nrf52811-pac = "0.12.2"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["52811"]
version = "=0.16.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[features]
rt = ["nrf52811-pac/rt"]
default = ["rt"]
monotonic = ["nrf-hal-common/monotonic"]
