[package]
name = "nrf52832-hal"
version = "0.8.1"
description = "HAL for nRF52832 microcontrollers"

repository = "https://github.com/nrf-rs/nrf52-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>"
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52832"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = ">= 0.5.8, < 0.7"
nb = "0.1.1"
nrf52832-pac = "0.8.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nrf52-hal-common]
path = "../nrf52-hal-common"
default-features = false
features = ["52832"]
version = "0.8.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[features]
doc = []
rt = ["nrf52832-pac/rt"]
xxAA-package = []
xxAB-package = []
UARTE_DMA_SIZE_4 = ["nrf52-hal-common/UARTE_DMA_SIZE_4"]
UARTE_DMA_SIZE_8 = ["nrf52-hal-common/UARTE_DMA_SIZE_8"]
UARTE_DMA_SIZE_16 = ["nrf52-hal-common/UARTE_DMA_SIZE_16"]
UARTE_DMA_SIZE_32 = ["nrf52-hal-common/UARTE_DMA_SIZE_32"]
UARTE_DMA_SIZE_64 = ["nrf52-hal-common/UARTE_DMA_SIZE_64"]
UARTE_DMA_SIZE_128 = ["nrf52-hal-common/UARTE_DMA_SIZE_128"]
UARTE_DMA_SIZE_255 = ["nrf52-hal-common/UARTE_DMA_SIZE_255"]


# Note: We use the xxAB package because it has the least amount of available resources.
#   However, most users will want to use the xxAA package.
#   If disabling default features, "DMA_SIZE_XX" should be manually set.
default = ["rt", "xxAB-package"]
