[package]
name = "nrf52832-hal"
version = "0.11.1"
description = "HAL for nRF52832 microcontrollers"

repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>"
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52832"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nrf52832-pac = "0.9.0"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["52832"]
version = "=0.11.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[features]
doc = []
rt = ["nrf52832-pac/rt"]
xxAA-package = []
xxAB-package = []

# Note: We use the xxAB package because it has the least amount of available resources.
#   However, most users will want to use the xxAA package.
default = ["rt", "xxAB-package"]
