[package]
name = "nrf52833-hal"
version = "0.11.1"
description = "HAL for nRF52833 microcontrollers"

repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
    "Erik Svensson <erik.public@gmail.com>"
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52833"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nrf52833-pac = "0.9.0"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["52833"]
version = "=0.11.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[features]
doc = []
rt = ["nrf52833-pac/rt"]
default = ["rt"]
