[package]
name = "nrf52840-hal"
version = "0.8.0"
description = "HAL for nRF52840 microcontrollers"

repository = "https://github.com/nrf-rs/nrf52-hal"
authors = [
    "James Munns <james@onevariable.com>",
    "Hanno Braun <hanno@braun-robotics.com>",
    "John Scarrott <johnps@outlook.com>",
    "Wez Furlong <wez@wezfurlong.org>",
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52840"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.1"
nrf52840-pac = "0.6.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nrf52-hal-common]
path = "../nrf52-hal-common"
default-features = false
features = ["52840"]
version = "0.8.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[features]
doc = []
rt = ["nrf52840-pac/rt"]
default = ["rt"]

