[package]
name = "nrf5340-net-hal"
version = "0.19.0"
description = "HAL for nRF5340 net SoC"
readme = "../README.md"

repository = "https://github.com/nrf-rs/nrf-hal"

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf53", "hal", "nrf5340"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nrf5340-net-pac = "0.12.2"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["5340-net"]
version = "=0.19.0"

[features]
doc = []
embedded-hal-02 = ["nrf-hal-common/embedded-hal-02"]
rt = ["nrf5340-net-pac/rt"]
rtic-monotonic = ["nrf-hal-common/rtic-monotonic"]
default = ["rt", "embedded-hal-02"]
