[package]
name = "nrf9160-hal"
version = "0.16.1"
description = "HAL for nRF9160 system-in-package"
readme = "README.md"

repository = "https://github.com/nrf-rs/nrf-hal"
authors = [
    "Jonathan Pallant (42 Technology) <jonathan.pallant@42technology.com>",
]

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf91", "hal", "nrf9160"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nrf9160-pac = "0.12.2"

[dependencies.nrf-hal-common]
path = "../nrf-hal-common"
default-features = false
features = ["9160"]
version = "=0.16.1"

[features]
doc = []
embedded-hal-02 = ["nrf-hal-common/embedded-hal-02"]
rt = ["nrf9160-pac/rt"]
default = ["rt", "embedded-hal-02"]
