[package]
name = "rtfm-demo"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
cortex-m-rtfm = "0.4"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"

[dependencies.nrf52832-hal]
version = "0.6"
path = "../nrf52832-hal"

[dependencies.nrf52832-pac]
version = "0.6"

