[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Support for Adafruit nRF52 Feathers"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
license = "MIT OR Apache-2.0"
name = "adafruit_nrf52pro"
repository = "https://github.com/nrf-rs/nrf52"
version = "0.0.1"

[dependencies]
nrf52-hal = { path = "../../nrf52-hal" }

[dev-dependencies]
cortex-m-rt = "~0.5"
cortex-m-semihosting = "~0.3"
panic-semihosting = "~0.3"
nb = "~0.1"

[features]
rt = ["nrf52-hal/rt"]
default = ["rt"]
