[package]
authors = [
   "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the nRF9160-DK"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "nrf9160-dk-bsp"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nrf9160-hal = { version = "0.10.0", path = "../../nrf9160-hal" }

[dev-dependencies]
nb = "0.1.2"
panic-semihosting = "0.5.3"
