[package]
name = "blinky-button-demo"
version = "0.1.0"
authors = ["Andres O. Vela"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
rtt-target = "0.6.0"
nrf52832-hal = { features = ["rt"], path = "../../nrf52832-hal" }
